tests/snapshots/adjacently_tagged_enum@query-3.snap
---
source: tests/test_roundtrip.rs
description: "Tuple(3, 4)"
snapshot_kind: text
---
t=Tuple&
c[0]=3&
c[1]=4
