tests/snapshots/adjacently_tagged_enum@query-4.snap
---
source: tests/test_roundtrip.rs
description: "Struct { name: \"item\", count: 42 }"
snapshot_kind: text
---
t=Struct&
c[name]=item&
c[count]=42
