tests/snapshots/alias_fields-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
user_name=alice&
message=hello%20world&
normal=42
