tests/snapshots/alias_fields.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
user_name=alice&
message=hello+world&
normal=42
