tests/snapshots/alias_fields@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
user_name=alice&
message=hello%20world&
normal=42
