tests/snapshots/alias_fields@query.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
user_name=alice&
message=hello+world&
normal=42
