tests/snapshots/all_empty_collections.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
empty_vec=&
empty_vec_vec=&
empty_hashmap=&
empty_btreemap=&
empty_option_vec=&
empty_string=
