tests/snapshots/all_empty_collections@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
empty_vec=&
empty_vec_vec=&
empty_hashmap=&
empty_btreemap=&
empty_option_vec=&
empty_string=
