tests/snapshots/all_empty_collections@query.snap
---
source: tests/test_roundtrip.rs
description: "AllEmpty { empty_vec: [], empty_vec_vec: [], empty_hashmap: {}, empty_btreemap: {}, empty_option_vec: Some([]), empty_string: \"\" }"
---
empty_string=
